<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".view.MainActivity">

    <LinearLayout
        android:id="@+id/linear_search_bar"
        android:layout_width="0dp"
        android:layout_height="76dp"
        android:background="#FDDD11"
        android:orientation="horizontal"
        android:padding="8dp"
        android:elevation="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <RelativeLayout
            android:id="@+id/text_area"
            android:layout_width="316dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/text_area"
            android:elevation="5dp">

            <ImageView
                android:id="@+id/image_search"
                android:layout_width="14.65dp"
                android:layout_height="14.65dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/button_back"
                android:src="@drawable/ic_search" />

            <EditText
                android:id="@+id/edit_text_input_search"
                android:layout_width="219dp"
                android:layout_height="20dp"

                android:layout_centerVertical="true"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="22dp"
                android:background="@color/white"
                android:hint="@string/search_hint"
                android:importantForAutofill="no"
                android:inputType="text"
                android:lineSpacingExtra="4sp"
                android:textAppearance="@style/input_text" />

        </RelativeLayout>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="19dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/button_back"
            android:src="@drawable/ic_cart" />

    </LinearLayout>


    <ImageView
        android:id="@+id/image_location"
        android:layout_width="10dp"
        android:layout_height="15dp"
        android:layout_marginStart="26dp"
        android:contentDescription="@string/button_back"
        android:elevation="6dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/ic_location"
        app:layout_constraintBottom_toBottomOf="@+id/linear_search_bar"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_send"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="6.6dp"
        android:elevation="6dp"
        android:text="@string/send_text"
        android:textColor="#CC000000"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/image_location"
        app:layout_constraintStart_toEndOf="@+id/image_location"
        app:layout_constraintTop_toTopOf="@+id/image_location" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_products"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="80dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear_search_bar"
        tools:listitem="@layout/card_product" />
</androidx.constraintlayout.widget.ConstraintLayout>